[package]
name = "barnine"
version = "0.1.0"
authors = ["Zach Thompson <zach@allotropic.com>"]
edition = "2018"
default-run = "barnine"

[dependencies]
allotropic = { path = "../allotropic" }
chrono = "0.4.19"
crossterm = "0.19.0"
lazy_static = "1.4.0"
log = "0.4.13"
serde_json = "1.0.61"
swaybar-types = { path = "../../src/swaybar-types" } # "2.0.0"
swayipc-async = "2.0.0-alpha.2"
tokio = { version = "1.2.0", features = ["full"] }
tokio-stream = "0.1.3"
tracing = "0.1.23"
tracing-appender = "0.1.2"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.15"
zbus = { path = "../../src/zbus-async-proxy/zbus" } # "2.0.0-beta"
zbus_macros = { path = "../../src/zbus-async-proxy/zbus_macros" } # "2.0.0-beta"
zvariant = { path = "../../src/zbus-async-proxy/zvariant" } # "2.0.5"

[dev-dependencies]
tempfile = "3.2.0"
