[package]
name = "barnine"
version = "0.1.0"
authors = ["Zach Thompson <zach@allotropic.com>"]
edition = "2018"
default-run = "barnine"

[dependencies]
async-trait = "0.1.42"
chrono = "0.4.19"
crossterm = "0.19.0"
futures = "0.3.12"
#lazy_static = "1.4.0"
log = "0.4.13"
notify = "5.0.0-pre.6"
serde = "1"
serde_derive = "1"
serde_json = "1"
swaybar-types = "2.0.0"
swayipc-async = "2.0.0-alpha.2"
tokio = { version = "1.2.0", features = ["full"] }
tokio-stream = "0.1.3"
toml = "0.5.8"
tracing = "0.1.23"
tracing-appender = "0.1.2"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.15"
zbus = "2.0.0-beta"
zbus_macros = "2.0.0-beta"
zvariant = "2.0.5"

[dev-dependencies]
tempfile = "3.2.0"
