[package]
name = "barnine"
version = "0.2.0"
authors = ["Zach Thompson <zach@allotropic.com>"]
edition = "2018"
default-run = "barnine"
license = "MIT OR Apache-2.0"
description = "A swaybar implementation using swaybar-protocol."
homepage = "https://github.com/zthompson47/barnine"
repository = "https://github.com/zthompson47/barnine"

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.26"
futures = "0.3.28"
log = "0.4.19"
notify = "=5.0.0-pre.12" #notify = "6.0.0"
owo-colors = "3.5.0"
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.96"
swaybar-types = "3.0.0"
#swayipc-async = "2.0.0-alpha.2"
swayipc-async = "2.0.1"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
toml = "0.7.4"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.17"
zbus = "=2.0.0-beta.2"
zbus_macros = "=2.0.0-beta.2"
zvariant = "=2.5.0"

[dev-dependencies]
tempfile = "3.6.0"
